--- a/package.json
+++ b/package.json
@@ -23,5 +23,17 @@
   "dependencies": {
     "minimatch": "^3.0.0",
     "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "gulp": "^3.9.1",
+    "gulp-istanbul": "^0.10.4",
+    "gulp-mocha": "^2.2.0",
+    "gulp-util": "^3.0.7",
+    "istanbul-traceur": "^1.0.7",
+    "mocha-traceur": "^2.1.0",
+    "sinon": "^1.17.3",
+    "traceur": "0.0.107",
+    "traceur-source-maps": "^1.0.6"
   }
 }
