--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/aetheric/vodoun#readme",
   "dependencies": {
+    "es6-denodeify": "^0.1.5",
     "minimatch": "^3.0.0",
     "underscore": "^1.8.3"
   },
@@ -33,8 +34,9 @@
     "gulp-mocha": "^2.2.0",
     "gulp-util": "^3.0.7",
     "istanbul-traceur": "^1.0.7",
+    "jshamcrest": "^0.7.0",
+    "jsmockito": "github:neben/jsmockito",
     "mocha-traceur": "^2.1.0",
-    "sinon": "^1.17.3",
     "traceur": "0.0.107",
     "traceur-source-maps": "^1.0.6"
   }
